[gd_scene load_steps=3 format=3 uid="uid://ceuqferm88nc"]

[ext_resource type="Script" path="res://UI/mainmenu.gd" id="1_a8rlm"]
[ext_resource type="Theme" uid="uid://cij1n14rp7py" path="res://UI/HUDtheme.tres" id="2_w4wla"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a8rlm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -42.5
offset_right = 39.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_w4wla")
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_w4wla")
text = "Plume Pursuit"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_w4wla")
text = "Play"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_w4wla")
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_w4wla")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
